--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/node-cron": "^3.0.11",
+    "@types/web-push": "^3.6.4",
     "jest": "^30.2.0",
     "prisma": "^5.22.0",
     "ts-jest": "^29.4.5",
