--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -22,6 +22,11 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:9001/api/auth/google/callback
 
+# LINE Login Configuration
+LINE_CHANNEL_ID=your-line-channel-id
+LINE_CHANNEL_SECRET=your-line-channel-secret
+LINE_CALLBACK_URL=http://localhost:9001/api/auth/line/callback
+
 # Web Push Notifications (VAPID Keys)
 # Generate with: npx web-push generate-vapid-keys
 VAPID_PUBLIC_KEY=your-vapid-public-key
