add line login and message api

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -27,6 +27,10 @@ LINE_CHANNEL_ID=your-line-channel-id
 LINE_CHANNEL_SECRET=your-line-channel-secret
 LINE_CALLBACK_URL=http://localhost:9001/api/auth/line/callback
 
+# LINE Messaging API (Push Notifications)
+LINE_NOTIFY_ENABLED=false
+LINE_CHANNEL_ACCESS_TOKEN=your-line-channel-access-token
+
 # Web Push Notifications (VAPID Keys)
 # Generate with: npx web-push generate-vapid-keys
 VAPID_PUBLIC_KEY=your-vapid-public-key
