--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,10 +11,11 @@
     "pages:dev": "npx @cloudflare/next-on-pages --watch"
   },
   "dependencies": {
+    "i18next": "^23.16.4",
     "next": "^15.0.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "i18next": "^23.16.4",
     "react-i18next": "^15.1.1",
     "zustand": "^5.0.1"
   },
