add admin functions

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -27,9 +27,10 @@ LINE_CHANNEL_ID=your-line-channel-id
 LINE_CHANNEL_SECRET=your-line-channel-secret
 LINE_CALLBACK_URL=http://localhost:9001/api/auth/line/callback
 
-# LINE Messaging API (Push Notifications)
+# LINE Messaging API (Notifications & Webhook)
 LINE_NOTIFY_ENABLED=false
 LINE_CHANNEL_ACCESS_TOKEN=your-line-channel-access-token
+# Webhook URL to set in LINE Developers Console: https://your-domain.com/api/line/webhook
 
 # Web Push Notifications (VAPID Keys)
 # Generate with: npx web-push generate-vapid-keys
@@ -40,3 +41,9 @@ VAPID_SUBJECT=mailto:your-email@example.com
 # Email Notifications (Gmail SMTP)
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-gmail-app-password
+
+# Notification Test Mode (only send to user ID 3 during testing)
+NOTIFICATION_TEST_MODE=true
+
+# Cron Jobs (set to false when using Azure Logic Apps or other external schedulers)
+ENABLE_CRON=true
